@@ -1,3 +1,10 @@
+2009-04-25  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/lastfm-ws.h
+	* src/lastfm-ws.c (+lastfm_ws_add_to_playlist):
+	Method to add a track to a playlist using the new API (it's a
+	wrapper for the old API by now).
+
 2009-04-24  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/controller.c (controller_tag_track, tag_track_thread):
